fixed overflow and added animation

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,7 +25,7 @@ background-color: #4b3f3f;
 /* start of NAV*/
 
 nav{
-position: fixed;
+position: flex;
 background-color: #171e3e;
 padding-bottom: 10px;
 
@@ -40,7 +40,10 @@ padding-bottom: 10px;
 }
 
 .nav-h1{
-    background-color: #fff;
+    background-color: #171e3e;
+    color: white;
+    border-bottom: 6px solid white;
+    
     text-align: center;
     font-size:  2em ;
   font-weight: lighter;
@@ -77,7 +80,18 @@ padding: 25px;
     color: #ffc74d;
 }
 
+.hamburger-button{
+    display: none;
+}
+
 @media screen and (max-width: 786px){
+body{
+    overflow-x: hidden;
+}
+    nav{
+
+        display: flex;
+    }
 
 
     .nav-wrapper{
@@ -86,8 +100,11 @@ height: 75px;
 
     }
     .nav-h1{
-      font-size: 25px;
+      font-size: 30px;
       
+      background-color: #171e3e;
+      color: white;
+      border-bottom: none;
         
     }
 
@@ -97,8 +114,9 @@ flex-direction: column;
 left: -100%;
 width: 75%;
 top: 70px;
-transition: 1.5s ease-in-out ;
+transition: .7s ease-in ;
 background-color: #171e3e;
+
 
 
 
@@ -113,40 +131,69 @@ background-color: #171e3e;
 
 
 .bar{
-    display: block;
+    
     height: 5px;
-    width: 50px;
-    background-color: #000000;
-    margin: 6px;
+    width: 100%;
+    background-color: #ffffff;
+    border-radius: 25px;
+    position: absolute;
+
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+    transition: .3s ease;
+
+  
    
 
 }
 
 
 
-.ham-line1{
 
-   
-}
+
 
 .hamburger-button{
 
-    float: right;
+    
     margin: 10px 10px;
-    background-color: #fff;
+    background-color: #ffffff00;
     display: block;
     cursor: pointer;
 
-    position: absolute;
-    right: 0px;
+   position: relative;
+   margin-left: auto;
+   height: 50px;
+   width: 50px;
     
+   border: none;
+    padding: 5px;
     
 }
 
+.hamburger-button span:nth-child(1){
+    top: 25%;
+}
+.hamburger-button span:nth-child(3){
+    top: 75%;
+}
+
+.hamburger-button.active span:nth-child(1){
+    top: 50%;
+    transform: translate(-50% , -50%) rotate(45deg);
+}
+
+.hamburger-button.active span:nth-child(2){
+    opacity: 0;
+}
 
 
+.hamburger-button.active span:nth-child(3){
+    top: 50%;
+    transform: translate(-50% , -50%) rotate(-45deg);
+}
 .active{
-padding: 5px;
+animation: bars;
 }
 
 
@@ -158,10 +205,8 @@ padding: 5px;
     left: 0%;
    width: 100%; 
    height: 50vh;
+  
 }
-
-
-
 }
     
 
